--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~12.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
+    "bootstrap": "^3.4.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
