--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@angular/platform-browser": "~12.1.0",
     "@angular/platform-browser-dynamic": "~12.1.0",
     "@angular/router": "~12.1.0",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.2.0",
+    "bootbox": "^5.5.2",
     "bootstrap": "^3.4.1",
+    "rxjs": "~6.6.0",
+    "sweetalert": "^2.1.2",
+    "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
