--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^3.4.1",
     "rxjs": "~6.6.0",
     "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.1.5",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
